<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_pass">

    <EditText
        android:id="@+id/editTextStaff1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"/>

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextStaff1"
        android:layout_alignLeft="@id/editTextStaff1"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword1"
        android:layout_alignLeft="@id/editTextPassword1"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/buttons"
        android:text="@string/go" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_alignLeft="@id/button7"
        android:layout_marginLeft="-149dp"
        android:layout_marginTop="34dp"
        android:textAllCaps="true"
        android:textColor="#191414"
        android:textSize="23sp"
        android:textStyle="bold" />

</RelativeLayout>